tests/e2e/tests/extauth/ext_auth_authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ext-auth
spec:
  action: CUSTOM
  provider:
    name: "httpbin-authorizer"
  rules:
    - to:
        - operation:
            paths: ["/*"]
