tests/e2e/tests/extauth/ext_auth_virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: "{{ .Name }}"
spec:
  gateways:
    - {{ .GatewayName }}
  hosts:
    - {{ .HostName }}
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: {{ .DestinationHost }}
            port:
              number: {{ .DestinationPort }}
